--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.2",
+    "socket.io": "^2.0.1",
     "three": "^0.85.2"
   }
 }
